# citizen-ledger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml
chain-registry/citizen-ledger-1/: chain.json
chain-registry/citizen-testnet-1/: assetlist.json  chain.json
circuits/: README.md  citizenship.circom  nullifier.circom
contracts/credential-registry/: Cargo.toml
contracts/credential-registry/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/grants/: Cargo.toml
contracts/grants/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/staking-emissions/: Cargo.toml
contracts/staking-emissions/src/: contract.rs  msg.rs  state.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: contract.rs  msg.rs  state.rs
contracts/voting/: Cargo.toml
contracts/voting/src/: contract.rs  msg.rs  state.rs
docs/: governance-audit-framework.md  grant-milestone-oracle-process.md  infrastructure-governance-budgeting.md  infrastructure-pilot-scope.md  mainnet-launch-plan.md  metrics-parameter-tuning.md  node-distribution-incentive-program.md  node-operator-guide.md  privacy-review-checklist.md  research-grant-cycle-framework.md  security-review-checklist.md  sybil-resistance-design.md  testnet-launch-guide.md  testnet-to-mainnet-checklist.md  v2-roadmap.md  whitepaper.md
faucet/: .env.example  README.md  package.json
faucet/src/: index.js
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/faq/: page.tsx
frontend/src/app/governance/: page.tsx
frontend/src/app/grants/: page.tsx
frontend/src/app/identity/: page.tsx
frontend/src/app/infrastructure/: page.tsx
frontend/src/app/staking/: page.tsx
frontend/src/app/transparency/: page.tsx
frontend/src/app/treasury/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/ui/: StatCard.tsx  StatusBadge.tsx  index.ts  shared.tsx
frontend/src/config/: chain.ts
frontend/src/hooks/: useContracts.ts  useWallet.ts
frontend/src/lib/: zk.ts
frontend/src/types/: zk.d.ts
indexer/: config.toml  schema.sql
schema/: staking-emissions.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_allocations.json  response_to_balance.json  response_to_category_spend.json  response_to_config.json  response_to_current_emission_rate.json  response_to_emission_schedule.json  response_to_get_credential.json  response_to_get_grant.json  response_to_get_proposal.json  response_to_get_recovery.json  response_to_get_vote.json  response_to_has_valid_credential.json  response_to_list_credentials.json  response_to_list_grants.json  response_to_list_grants_by_applicant.json  response_to_list_issuers.json  response_to_list_proposals.json  response_to_list_research_categories.json  response_to_list_research_cycles.json  response_to_list_votes.json  response_to_pending_rewards.json  response_to_slash_history.json  response_to_spend_history.json  response_to_staker.json  response_to_supply.json
scripts/: citizen-reward-keeper.service  deploy-docker.sh  deploy-local.sh  deploy.sh  generate-schemas.bat  generate-schemas.sh  local-testnet.sh  optimize.bat  optimize.sh  public-testnet-genesis.sh  reward-keeper.env.example  reward-keeper.py  setup-metrics.sh
simulations/: README.md  config.json  tokenomics_sim.py
tests/integration/: Cargo.toml
tests/integration/src/: helpers.rs  lib.rs  test_credential_to_voting.rs  test_full_flow.rs  test_grants_lifecycle.rs  test_treasury_governance.rs
