[workspace]
members = [
  "contracts/credential-registry",
  "contracts/treasury",
  "contracts/voting",
  "contracts/grants",
  "contracts/staking-emissions",
  "packages/citizen-common",
  "tests/integration",
]
resolver = "2"

[workspace.package]
license = "MIT"

[workspace.dependencies]
cosmwasm-std    = "2.2"
cosmwasm-schema = "2.2"
cw-storage-plus = "2.0"
cw2             = "2.0"
cw-utils        = "2.0"
cw-multi-test   = "2.3"
schemars        = "0.8"
serde           = { version = "1.0", default-features = false, features = ["derive"] }
thiserror       = "2"
sha2            = "0.10"
hex             = "0.4"
serde_json      = "1.0"

[profile.release]
opt-level       = 3
debug           = false
rpath           = false
lto             = true
debug-assertions = false
codegen-units   = 1
panic           = "abort"
incremental     = false
overflow-checks = true
