[package]
name = "grants"
version = "0.1.0"
edition = "2021"
description = "Milestone-based grant funding for Citizen Ledger – apply, approve, and release funds on milestone completion"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
citizen-common   = { path = "../../packages/citizen-common" }
cosmwasm-std     = { workspace = true }
cosmwasm-schema  = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
schemars         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
serde_json       = { workspace = true }

[dev-dependencies]
cosmwasm-std = { workspace = true }
