[package]
name = "staking-emissions"
version = "0.1.0"
edition = "2021"
description = "Token staking and emissions schedule for Citizen Ledger – capped supply with block-based emission curve"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
citizen-common   = { path = "../../packages/citizen-common" }
cosmwasm-std     = { workspace = true }
cosmwasm-schema  = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
schemars         = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
cosmwasm-std = { workspace = true }
